Factorize common functions away from an interface-specific file

--- a/CoDriver-Splitter/CoDriver-Splitter.vcxproj.filters
+++ b/CoDriver-Splitter/CoDriver-Splitter.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="MOXAudio2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MOXAudio2_Common.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MOXAudio2_Common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
