--- a/CoDriver-Splitter/CoDriver-Splitter.vcxproj
+++ b/CoDriver-Splitter/CoDriver-Splitter.vcxproj
@@ -132,6 +132,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="MOXAudio2.cpp" />
+    <ClCompile Include="MOXAudio2_Common.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MOXAudio2_Common.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
