Properly support XAudio 2.8, including proper handling of 2.8 -> 2.9 promotion
Wrapper is now "self aware" - it will detect when it's trying to wrap itself (which will happen when using XAudio 2.8 on Windows 10) and gracefully handle this

--- a/CoDriver-Splitter/CoDriver-Splitter.vcxproj.filters
+++ b/CoDriver-Splitter/CoDriver-Splitter.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="MOXAudio2_Common.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="dllmain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MOXAudio2_Common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MOXAudio2_Hooks.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
