--- a/CoDriver-Splitter/CoDriver-Splitter.vcxproj
+++ b/CoDriver-Splitter/CoDriver-Splitter.vcxproj
@@ -131,11 +131,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="MOXAudio2.cpp" />
     <ClCompile Include="MOXAudio2_Common.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MOXAudio2_Common.h" />
+    <ClInclude Include="MOXAudio2_Hooks.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
