Legacy XAudio2 support

--- a/CoDriver-Splitter/CoDriver-Splitter.vcxproj
+++ b/CoDriver-Splitter/CoDriver-Splitter.vcxproj
@@ -138,6 +138,12 @@
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="IID.cpp" />
     <ClCompile Include="MOXAudio2.cpp" />
+    <ClCompile Include="MOXAudio2Legacy.cpp">
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(DXSDK_DIR)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(DXSDK_DIR)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(DXSDK_DIR)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(DXSDK_DIR)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ClCompile>
     <ClCompile Include="MOXAudio2_Common.cpp" />
   </ItemGroup>
   <ItemGroup>
