--- a/CoDriver-Splitter/CoDriver-Splitter.vcxproj.filters
+++ b/CoDriver-Splitter/CoDriver-Splitter.vcxproj.filters
@@ -44,7 +44,7 @@
     <ClInclude Include="Detours\detver.h">
       <Filter>Header Files\Detours</Filter>
     </ClInclude>
-    <ClInclude Include="MOXAudio2.h">
+    <ClInclude Include="IMOXAudio2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
