--- a/CoDriver-Splitter/CoDriver-Splitter.vcxproj.filters
+++ b/CoDriver-Splitter/CoDriver-Splitter.vcxproj.filters
@@ -48,4 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="CoDriver-Splitter.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
 </Project>
